--- a/SparcWeb/Pages/_Host.cshtml
+++ b/SparcWeb/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace Sparc_v2.Pages
+@namespace SparcWeb.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
