--- a/SparcWeb/_Imports.razor
+++ b/SparcWeb/_Imports.razor
@@ -6,5 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Sparc_v2
-@using Sparc_v2.Shared
+
+@using SparcWeb
+@using SparcWeb.Pages
+@using SparcWeb.Shared
