Finished static pages

--- a/SparcWeb/Pages/Project.razor
+++ b/SparcWeb/Pages/Project.razor
@@ -1,6 +1,214 @@
-﻿namespace Sparc_v2.Pages
-{
-    public class Projects
-    {
-    }
-}
+﻿@page "/Project"
+
+<div class="project-page">
+    <section class="hero-header">
+        <div class="container">
+            <div class="header">
+                <div class="title">
+                    <h2 class="title-1 semi-bold">Kode Kit</h2>
+                    <img src="./images/icons/Up-Right.svg" />
+                </div>
+                <div>
+                    <p class="title-2">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
+                </div>
+                <div class="cta-flex">
+                    <div class="profile-pics-wrapper">
+                        <div class="profile-pic">
+                            <img src="images/Picture.png" />
+                        </div>
+                        <div class="profile-pic">
+                            <img src="images/Picture.png" />
+                        </div>
+                        <div class="profile-pic">
+                            <img src="images/Picture.png" />
+                        </div>
+                        <div class="profile-pic">
+                            <img src="images/Picture.png" />
+                        </div>\s
+                        <div class="profile-pic">
+                            <img src="images/Picture.png" />
+                        </div>
+                        <div class="profile-pic">
+                            <img src="images/Picture.png" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="timeline">
+        <div class="container">
+            <div class="wrapper">
+                <div class="timeline-sidebar">
+                    <img src="./images/Sidebar.png" />
+                </div>
+                <div class="header">
+                    <p class="subtitle-small">Recent Timeline</p>
+                </div>
+                <div class="timeline-item">
+                    <div class="item-header">
+                        <p class="title-2 semi-bold">Kode Kit is ready to go!</p>
+                        <p class="timeline-date subtitle-small">AUG 22, 2022</p>
+                    </div>
+                    <div class="timeline-content">
+                        <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="item-header">
+                        <p class="title-2 semi-bold">Kode Kit is ready to go!</p>
+                        <p class="timeline-date subtitle-small">AUG 22, 2022</p>
+                    </div>
+                    <div class="timeline-content">
+                        <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="item-header">
+                        <p class="title-2 semi-bold">Kode Kit is ready to go!</p>
+                        <p class="timeline-date subtitle-small">AUG 22, 2022</p>
+                    </div>
+                    <div class="timeline-content">
+                        <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="item-header">
+                        <p class="title-2 semi-bold">Kode Kit is ready to go!</p>
+                        <p class="timeline-date subtitle-small">AUG 22, 2022</p>
+                    </div>
+                    <div class="timeline-content">
+                        <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="item-header">
+                        <p class="title-2 semi-bold">Kode Kit is ready to go!</p>
+                        <p class="timeline-date subtitle-small">AUG 22, 2022</p>
+                    </div>
+                    <div class="timeline-content">
+                        <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                    </div>
+                </div>
+
+                <div class="read-more">
+                    <button class="btn-small">Read More</button>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="community">
+        <div class="container">
+            <div class="card-wrapper">
+                <div class="community-card">
+                    <div class="cta-flex">
+                        <div class="profile-pics-wrapper">
+                            <div class="profile-pic">
+                                <img src="images/Picture.png" />
+                            </div>
+                            <div class="profile-pic">
+                                <img src="images/Picture.png" />
+                            </div>
+                            <div class="profile-pic">
+                                <img src="images/Picture.png" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card-header">
+                        <h6 class="title-2 semi-bold">Individuals</h6>
+                        <p class="subtitle-medium">At an individual level, we want to provide guidance, resources and anything else we can to help you find similar companies, fit into our projects or build your own.
+
+                        </p>
+                    </div>
+
+                    <div class="community-signup">
+                        <p>Join our community</p>
+                        <div class="community-join">
+                            <input placeholder="Your Email"/>
+                            <button class="btn-large">Join</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="community-card badge">
+                    <div class="sparc-badge">
+                        <img src="./images/sparc-approved-badge-2x 1.png" />
+                    </div>
+                    <div class="card-header">
+                        <h6 class="title-2 semi-bold">Individuals</h6>
+                        <p class="subtitle-medium">At an individual level, we want to provide guidance, resources and anything else we can to help you find similar companies, fit into our projects or build your own.
+
+                        </p>
+                    </div>
+
+                    <div class="community-signup">
+                        <p>Join our movement</p>
+                        <div class="community-join">
+                            <button class="btn-large">Apply to become Sparc Align</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+        <section class="resources">
+        <div class="container">
+            <div class="header">
+                <h3 class="subtitle-large semi-bold">Related Blogs</h3>
+                <p class="subtitle-small">Quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+            </div>
+
+            <div class="blog-wrapper">
+                <div class="blog-card">
+                    <div class="blog-image">
+                        <img src="./images/Laptop.png" />
+                    </div>
+                    <div class="blog-tags">
+                        <button class="tag btn-small">#Design</button>
+                        <button class="tag btn-small">#Productivity</button>
+                    </div>
+                    <div>
+                        <p class="title-2">
+                            Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="blog-card">
+                    <div class="blog-image">
+                        <img src="./images/Laptop.png" />
+                    </div>
+                    <div class="blog-tags">
+                        <button class="tag btn-small">#Design</button>
+                        <button class="tag btn-small">#Productivity</button>
+                    </div>
+                    <div>
+                        <p class="title-2">
+                            Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="blog-card">
+                    <div class="blog-image">
+                        <img src="./images/Laptop.png" />
+                    </div>
+                    <div class="blog-tags">
+                        <button class="tag btn-small">#Design</button>
+                        <button class="tag btn-small">#Productivity</button>
+                    </div>
+                    <div>
+                        <p class="title-2">
+                            Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
