--- a/SparcWeb/app.scss
+++ b/SparcWeb/app.scss
@@ -5,3 +5,6 @@
 
 @import "wwwroot/Styles/Page/index.scss";
 @import "wwwroot/Styles/Page/ProjectList.scss";
+@import "wwwroot/Styles/Page/Project.scss";
+@import "wwwroot/Styles/Page/BlogList.scss";
+@import "wwwroot/Styles/Page/Blog.scss";
