--- a/SparcWeb/wwwroot/Styles/Page/ProjectList.scss
+++ b/SparcWeb/wwwroot/Styles/Page/ProjectList.scss
@@ -68,3 +68,20 @@
         }
     }
 }
+
+.project-tags {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    max-width: 76%;
+    margin: auto;
+
+    .tag {
+        border: 1px solid $peach-500;
+        background: inherit;
+        color: $peach-500;
+        border-radius: 100px;
+    }
+}
