--- a/SparcWeb/wwwroot/css/app.css
+++ b/SparcWeb/wwwroot/css/app.css
@@ -8,9 +8,6 @@ section {
   padding-bottom: 200px;
 }
 
-/*section:first-of-type{
-    padding-top: 0;
-}*/
 section:last-of-type {
   padding-bottom: 100px;
 }
@@ -83,9 +80,6 @@ section {
   padding-bottom: 200px;
 }
 
-/*section:first-of-type{
-    padding-top: 0;
-}*/
 section:last-of-type {
   padding-bottom: 100px;
 }
@@ -210,7 +204,7 @@ button {
 .cta-flex {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 .cta-flex .profile-pics-wrapper {
   display: flex;
@@ -226,6 +220,44 @@ button {
   border-radius: 100px;
   font-size: 16px;
   font-style: italic;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 32px 48px;
+  background: #F2EDDF;
+}
+nav .logo {
+  flex: 1;
+}
+nav .logo img {
+  max-width: 114px;
+}
+nav .nav-links-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  background: white;
+  border-radius: 100px;
+  padding: 10px 24px;
+}
+nav .community-join {
+  flex: 1;
+}
+nav .community-join .profile-pic {
+  margin-right: 12px;
+  max-width: 14px;
+  max-height: 20px;
+}
+nav .community-join .profile-pic img {
+  max-width: 24px;
+  max-height: 24px;
+}
+nav .community-join button {
+  background: #FF756A;
+  border: none;
 }
 
 .blog-wrapper {
@@ -292,6 +324,71 @@ button {
   background: var(--secondary-300);
 }
 
+.community .header {
+  margin-bottom: 56px;
+  max-width: 50%;
+}
+.community .card-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 32px;
+}
+.community .card-wrapper .community-card {
+  background: #F2EDDF;
+  border-radius: 24px;
+  padding: 48px 40px 40px;
+  position: relative;
+}
+.community .card-wrapper .community-card .sparc-badge {
+  position: absolute;
+  left: 40px;
+  top: -18px;
+}
+.community .card-wrapper .community-card .cta-flex {
+  margin-bottom: 36px;
+}
+.community .card-wrapper .community-card .card-header {
+  margin-bottom: 48px;
+}
+.community .card-wrapper .community-card .card-header h6 {
+  margin-bottom: 12px;
+}
+.community .card-wrapper .community-card .community-signup p {
+  margin-bottom: 8px;
+}
+.community .card-wrapper .community-card .community-signup .community-join {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 12px;
+}
+.community .card-wrapper .community-card .community-signup .community-join input {
+  padding: 16px 24px;
+  background: white;
+  border: 1px solid var(--primary-300);
+  border-radius: 100px;
+  width: 100%;
+}
+.community .card-wrapper .community-card .community-signup .community-join button {
+  background: #FF756A;
+  color: white;
+  border: none;
+  border-radius: 100px;
+}
+.community .card-wrapper .badge .card-header {
+  margin-top: 72px;
+}
+
+.resources .header {
+  margin-bottom: 54px;
+  max-width: 50%;
+}
+.resources .header .resources-tag {
+  background: #FFECEB;
+  color: #FF756A;
+}
+
 .title-2 {
   font-size: 24px;
 }
@@ -331,9 +428,6 @@ section {
   padding-bottom: 200px;
 }
 
-/*section:first-of-type{
-    padding-top: 0;
-}*/
 section:last-of-type {
   padding-bottom: 100px;
 }
@@ -397,7 +491,6 @@ h1 {
 }
 
 .home-hero {
-  height: 100vh;
   background: #F2EDDF;
   position: relative;
 }
@@ -556,62 +649,6 @@ h1 {
   margin-bottom: 0;
 }
 
-.community .header {
-  margin-bottom: 56px;
-  max-width: 50%;
-}
-.community .card-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 32px;
-}
-.community .card-wrapper .community-card {
-  background: #F2EDDF;
-  border-radius: 24px;
-  padding: 48px 40px 40px;
-  position: relative;
-}
-.community .card-wrapper .community-card .sparc-badge {
-  position: absolute;
-  left: 40px;
-  top: -18px;
-}
-.community .card-wrapper .community-card .cta-flex {
-  margin-bottom: 36px;
-}
-.community .card-wrapper .community-card .card-header {
-  margin-bottom: 48px;
-}
-.community .card-wrapper .community-card .card-header h6 {
-  margin-bottom: 12px;
-}
-.community .card-wrapper .community-card .community-signup p {
-  margin-bottom: 8px;
-}
-.community .card-wrapper .community-card .community-signup .community-join {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 12px;
-}
-.community .card-wrapper .community-card .community-signup .community-join input {
-  padding: 16px 24px;
-  background: white;
-  border: 1px solid var(--primary-300);
-  border-radius: 100px;
-  width: 100%;
-}
-.community .card-wrapper .community-card .community-signup .community-join button {
-  background: #FF756A;
-  color: white;
-  border: none;
-  border-radius: 100px;
-}
-.community .card-wrapper .badge .card-header {
-  margin-top: 72px;
-}
-
 .resources .header {
   margin-bottom: 54px;
   max-width: 50%;
@@ -631,9 +668,6 @@ section {
   padding-bottom: 200px;
 }
 
-/*section:first-of-type{
-    padding-top: 0;
-}*/
 section:last-of-type {
   padding-bottom: 100px;
 }
@@ -744,4 +778,270 @@ h1 {
   margin-bottom: 0px;
   padding: 0px;
   max-width: calc(53% - 64px);
+}
+
+.project-tags {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  max-width: 76%;
+  margin: auto;
+}
+.project-tags .tag {
+  border: 1px solid #FF756A;
+  background: inherit;
+  color: #FF756A;
+  border-radius: 100px;
+}
+
+.project-page .hero-header .header {
+  max-width: 32%;
+  margin: 0 auto;
+}
+.project-page .hero-header .header .title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 6px;
+}
+.project-page .hero-header .header .cta-flex {
+  justify-content: center;
+  margin-top: 40px;
+}
+.project-page .hero-header .header .cta-flex .profile-pic {
+  max-width: 24px;
+  max-height: 20px;
+}
+.project-page .hero-header .header .cta-flex .profile-pic img {
+  max-width: 24px;
+  max-height: 24px;
+}
+.project-page .timeline .wrapper {
+  position: relative;
+  max-width: 26%;
+  margin: 0 auto;
+}
+.project-page .timeline .wrapper .timeline-sidebar {
+  position: absolute;
+  left: -64px;
+  top: 0;
+}
+.project-page .timeline .wrapper .header {
+  margin-bottom: 30px;
+}
+.project-page .timeline .wrapper .header p {
+  color: var(--primary-500);
+}
+.project-page .timeline .wrapper .timeline-item {
+  margin-bottom: 34px;
+}
+.project-page .timeline .wrapper .timeline-item .item-header {
+  margin-bottom: 10px;
+}
+.project-page .timeline .wrapper .timeline-item .item-header .title-2 {
+  line-height: 32px;
+}
+.project-page .timeline .wrapper .timeline-item .item-header .timeline-date {
+  color: var(--primary-500);
+  line-height: 21px;
+}
+.project-page .timeline .wrapper .timeline-item:nth-last-child(-n+2) {
+  margin-bottom: 94px;
+}
+.project-page .timeline .wrapper .read-more {
+  text-align: center;
+  max-width: 220px;
+  margin: auto;
+}
+.project-page .timeline .wrapper .read-more button {
+  width: 100%;
+  background: white;
+  border: 1px solid var(--primary-900);
+  color: var(--primary-900);
+}
+.project-page .resources .header {
+  text-align: center;
+  max-width: 100%;
+}
+.project-page .resources .header h3 {
+  margin-bottom: 8px;
+}
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+section {
+  padding-top: 160px;
+  padding-bottom: 200px;
+}
+
+section:last-of-type {
+  padding-bottom: 100px;
+}
+
+.cta-box {
+  padding: 24px 32px;
+  background: #FFB600;
+  border: 1px solid var(--grey-900);
+  border-radius: 24px;
+  max-width: 562px;
+  margin: 0 auto;
+}
+.cta-box .box-header {
+  margin-bottom: 16px;
+}
+.cta-box .cta-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.cta-box .cta-flex .profile-pics-wrapper {
+  display: flex;
+}
+.cta-box .cta-flex .profile-pic {
+  max-width: 40px;
+  max-height: 40px;
+  border-radius: 1000px;
+  margin-left: -10px;
+}
+.cta-box .cta-flex button {
+  background: var(--grey-900);
+  border-radius: 100px;
+  font-size: 16px;
+  font-style: italic;
+}
+
+h1 {
+  font-size: 96px !important;
+}
+
+.section-tag {
+  padding: 10px 16px;
+  box-shadow: -10px 2px 4px rgba(16, 45, 71, 0.02);
+  font-style: italic;
+  max-width: fit-content;
+  margin-bottom: 32px;
+}
+
+.value-tag {
+  background: white;
+}
+.value-tag p {
+  color: var(--error-500);
+}
+
+.project-tag {
+  background: white;
+}
+.project-tag p {
+  color: var(--error-500);
+}
+
+.blog-list-page .blog-hero {
+  max-width: 72%;
+  margin: auto;
+}
+.blog-list-page .blog-hero .title {
+  max-width: 48%;
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
+.blog-list-page .blog-hero .title .title-1 {
+  text-align: center;
+}
+.blog-list-page .blog-featured {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 42px;
+  padding-top: 0;
+}
+.blog-list-page .blog-featured .left {
+  width: 100%;
+}
+.blog-list-page .blog-featured .left img {
+  width: 100%;
+}
+.blog-list-page .blog-featured .right {
+  max-width: 49%;
+}
+.blog-list-page .blog-featured .right .wrapper {
+  max-width: 58%;
+}
+.blog-list-page .blog-featured .right .wrapper .title {
+  margin-bottom: 40px;
+}
+.blog-list-page .blog-featured .right .wrapper .title h5 {
+  margin-bottom: 40px;
+}
+.blog-list-page .blog-grid {
+  padding-top: 0;
+}
+.blog-list-page .blog-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(384px, 1fr));
+  grid-gap: 32px;
+}
+.blog-list-page .blog-list .blog-card .card-image {
+  margin-bottom: 12px;
+}
+.blog-list-page .blog-list .blog-card .card-image img {
+  width: 100%;
+}
+.blog-list-page .blog-list .blog-card .title {
+  margin-bottom: 12px;
+}
+.blog-tags {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+.blog-tags p {
+  color: var(--primary-500);
+}
+.blog-tags .seperation-line {
+  border: 1px solid #FF756A;
+  width: 1px;
+  height: 14px;
+  margin: 0 8px;
+}
+
+.posted {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.posted p {
+  color: var(--primary-500);
+}
+
+.blog-page .container {
+  max-width: 1024px;
+}
+.blog-page .blog .title {
+  text-align: center;
+  margin-bottom: 50px;
+}
+.blog-page .blog .posted {
+  margin-bottom: 40px;
+}
+.blog-page .blog .blog-image {
+  border-radius: 6px;
+  margin-bottom: 80px;
+}
+.blog-page .blog .blog-image img {
+  width: 100%;
+}
+.blog-page .blog .blog-content div {
+  text-align: center;
+  margin-top: 80px;
+}
+.blog-page .blog .blog-content div button {
+  background: var(--grey-900);
+  color: white;
+  border-radius: 100px;
 }
