Added api for slack slash commands

--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -1,7 +1,5 @@
 ﻿@page "/"
-
 <PageTitle>Index</PageTitle>
-
 
 <div class="homepage">
     <section class="home-hero">
@@ -314,3 +312,12 @@
         </div>
     </section>
 </div>
+
+
+@code {
+    
+    protected override async Task OnInitializedAsync()
+    {
+        //await Api.GetSlackPostsAsync(); 
+    }
+}
