--- a/SparcWeb/Shared/MainLayout.razor
+++ b/SparcWeb/Shared/MainLayout.razor
@@ -1,10 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>Sparc v2</PageTitle>
+<PageTitle>Sparc</PageTitle>
 
 <div class="page">
     <NavMenu />
-
     <main>
         @Body
     </main>
