--- a/SparcWeb/_Imports.razor
+++ b/SparcWeb/_Imports.razor
@@ -1,12 +1,27 @@
 ﻿@using System.Net.Http
+@using System.Net.Http.Json
+@using System.ComponentModel.DataAnnotations
+
+@using Microsoft.Extensions.Configuration
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 
+@using Sparc.Core
 @using SparcWeb
 @using SparcWeb.Pages
 @using SparcWeb.Shared
+@using SparcFeatures
+
+@inject SparcApi Api
+@inject Public<SparcApi> PublicApi
+@attribute [AllowAnonymous]
+
+    @inject IJSRuntime JSRuntime
+@inject NavigationManager Nav
