--- a/SparcWeb/Shared/NavMenu.razor
+++ b/SparcWeb/Shared/NavMenu.razor
@@ -1,11 +1,37 @@
-﻿
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
+﻿<nav>
+    <div class="logo">
+        <img src="./images/icons/Logo.png" />
+    </div>
+    <div class="nav-links-wrapper">
+        <div class="nav-link">
+            <a href="#">Home</a>
+        </div>
+        <div class="nav-link">
+            <a href="/bloglist">Resources</a>
+        </div>
+        <div class="nav-link">
+            <a href="/projectlist">Projects</a>
+        </div>
+        <div class="nav-link">
+            <a href="/contact">Contact</a>
+        </div>
+    </div>
+    <div class="community-join">
+        <div class="cta-flex">
+            <div class="profile-pics-wrapper">
+                <div class="profile-pic">
+                    <img src="images/Picture.png" />
+                </div>
+                <div class="profile-pic">
+                    <img src="images/Picture.png" />
+                </div>
+                <div class="profile-pic">
+                    <img src="images/Picture.png" />
+                </div>
+            </div>
+            <div>
+                <button>Join community</button>
+            </div>
+        </div>
+    </div>
+</nav>
