--- a/SparcWeb/wwwroot/Styles/Page/ProjectList.scss
+++ b/SparcWeb/wwwroot/Styles/Page/ProjectList.scss
@@ -37,6 +37,10 @@
     }
 
     .project-list-wrapper {
+        .container {
+            padding: 0 30px;
+        }
+
         .list-wrapper {
             .filters {
                 display: flex;
