--- a/SparcWeb/Pages/ProjectsList.razor
+++ b/SparcWeb/Pages/ProjectsList.razor
@@ -48,9 +48,9 @@
                             </div>
                             <div class="card-header">
                                 <h5 class="title-2 semi-bold">KodeKit</h5>
-                                <div class="image-wrapper">
+                                <a href="https://www.kodekit.io/" target="_blank" class="image-wrapper">
                                     <img src="images/icons/Up-Right.svg" />
-                                </div>
+                                </a>
                             </div>
                             <div>
                                 <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
@@ -159,3 +159,13 @@
     </section>
     
 </div>
+
+@code {
+    public List<SlackPost> PostList = new List<SlackPost>();
+
+    protected override async Task OnInitializedAsync()
+    {
+        var list = await Api.GetSlackPostsAsync("/blog-post");
+        PostList = list.ToList();
+    }
+}
