--- a/SparcWeb/wwwroot/Styles/Global/_variables.scss
+++ b/SparcWeb/wwwroot/Styles/Global/_variables.scss
@@ -1,4 +1,5 @@
-﻿$yellow: #FFB600;
+﻿$white: #FFFFFF;
+$yellow: #FFB600;
 $yellow-100: #F2EDDF;
 $yellow-500: #FFB600;
 
@@ -12,8 +13,9 @@ $peach-100: #FFECEB;
 $box-shadow-md: -10px 2px 4px rgba(16, 45, 71, 0.02);
 
 .container {
-    max-width: 1440px;
+    max-width: 1480px;
     margin: 0 auto;
+    padding: 0 20px;
 }
 
 section{
@@ -72,15 +74,6 @@ h1{
     font-style: italic;
     max-width: fit-content;
     margin-bottom: 32px;
-}
-
-.value-tag {
-    background: white;
-    
-
-    p {
-        color: var(--error-500);
-    }
 }
 
 .project-tag {
